# claudre

./: CLAUDE.md  CONFIGURATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/claudre/: __init__.py  app.py  claude_state.py  cli.py  config.py  logger.py  models.py  registry.py  state_detector.py  summary_engine.py  templates.py  tmux.py  tmux_adapter.py  vcs.py
src/claudre/css/: app.tcss
src/claudre/screens/: confirm.py  dashboard.py  help.py  new_window.py  open_project.py  popup.py  run_command.py  send_message.py
src/claudre/widgets/: detail_panel.py  project_table.py  toast.py  window_table.py
tests/: test_claude_state.py  test_cli.py  test_config.py  test_models.py  test_tmux.py  test_vcs.py
tests/unit/: test_cli.py  test_config.py  test_models.py  test_popup.py  test_registry.py  test_state_detector.py  test_summary_engine.py  test_templates.py  test_vcs.py
